Fixed bugs, changed active scraping to every hour